--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 100px 1fr;
     grid-template-areas:
         "sidebar header"
         "sidebar maincontent";
@@ -37,15 +37,24 @@
     grid-template-rows: 1fr 1fr;
 }
 
+.hiuser{
+    font-size: 12px;
+}
+
 .sidebar{
     grid-area: sidebar;
+    background-color: #1892d3;
+    font-size: 30px;
+    color: white;
 }
 
 .maincontent{
     grid-area: maincontent;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr;
+    gap: 20px;
+    background-color: #e1e8f0;
 }
 
 .cards{
@@ -56,6 +65,9 @@
         "yp yp yp"
         "card1 card2 card3"
         "card4 card5 card6";
+    background-color: #e1e8f0;
+    border-radius: 15px;
+    margin: 20px;
 }
 
 .heading{
@@ -69,30 +81,96 @@
 
 .card1{
     grid-area: card1;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card2{
     grid-area: card2;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card3{
     grid-area: card3;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card4{
     grid-area: card4;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card5{
     grid-area: card5;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card6{
     grid-area: card6;
+    background-color: white;
+    margin: 15px;
+    border-left: 5px solid #f1b32b;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .announcetrend{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 50px 1fr;
+}
+
+.sidebar  svg{
+    height: 20px;
+    width: 20px;
+    fill: white;
+} 
+
+svg {
+    height: 20px;
+    width: 20px;
+}
+
+.searchbar{
+    height: 20px;
+    width: 500px;
+    background-color: #e1e8f0;
+    border-radius: 25px;
+}
+
+button{
+    background-color: #1892d3;
+    color: white;
+    border-radius: 25px;
+    border: none;
+    height: 40px;
+    width: 70px;
+    font-weight: bold;
+}
+
+.announcements{
+    background-color: white;
+}
+
+.trend{
+    background-color: white;
 }
